# cpp20-in-details

./: CMakeLists.txt  README.md
CaseStudies/: CMakeLists.txt
Concurrency/: CMakeLists.txt  lazyGenerator.cpp
CoreLanguage/: CMakeLists.txt  tooSpecific.cpp
